getting-started/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus-getting-started
  name: quarkus-getting-started
  namespace: quarkus-getting-started  
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-getting-started
