getting-started/k8s/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-getting-started
  namespace: quarkus-getting-started  
  labels:
    app: quarkus-getting-started
spec:
  to:
    kind: Service
    name: quarkus-getting-started
    weight: 100
  port:
    targetPort: 8080
